--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,13 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
+
 * {
     padding: 0;
     margin: 0;
 
     box-sizing: border-box;
-    font-family: cursive, sans-serif;
+    font-family: monospace;
 }
 
 :root {
@@ -13,6 +15,8 @@
     --cor-gamboge: #eca442;
     --cor-tomato: #ca2521;
     --cor-pepperoni: #61120e;
+
+    --fonte-nerko: 'Nerko One';
 }
 
 header {
@@ -20,10 +24,16 @@ header {
     color: white;
     padding: 20px;
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.479);
+    font-family: var(--fonte-nerko);
 }
 
 header > h1 {
     padding-bottom: 5px;
+    font-size: 2.4em;
+}
+
+header > p {
+    font-size: 1.3em;
 }
 
 nav {
@@ -45,17 +55,28 @@ nav > ul > li > a {
     background-color: var(--cor-tomato);
     padding: 2px;
     border-radius: 8px;
+    font-size: 1.2em;
 }
 
 nav > ul > li > a:hover {
     background-color: var(--cor-gamboge);
 }
 
-#section-pizzas {
+#section-cardapio {
     background-color: white;
     width: 100%;
     margin: auto;
     padding: 20px;
+}
+
+#section-cardapio > h2 {
+    text-align: center;
+    font-size: 2em;
+    background-color: var(--cor-tomato);
+    width: 300px;
+    color: white;
+    margin: auto;
+    margin-bottom: 10px;
 }
 
 section.itens {
@@ -63,9 +84,14 @@ section.itens {
     text-align: center;
     background-color: white;
     width: 90%;
+    max-width: 300px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.479);
     padding: 10px;
     margin-bottom: 12px;
+}
+
+section.itens h2 {
+    font-size: 1.6em;
 }
 
 .img-itens {
@@ -74,12 +100,13 @@ section.itens {
 
 .bnt-comprar-itens {
     margin-top: 5px;
-    padding: 5px;
+    padding: 8px;
     background-color: var(--cor-tomato);
     color: white;
     border: none;
     border-radius: 8px;
     box-shadow: 0px 0px 5px var(--cor-gamboge);
+    font-size: 1em;
 }
 
 .bnt-comprar-itens:hover {
@@ -93,6 +120,10 @@ footer {
     color: white;
     text-align: center;
     box-shadow: 0px -3px 10px rgba(0, 0, 0, 0.479);
+}
+
+footer p {
+    margin-top: 5px;
 }
 
 footer a {
