--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,15 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
+@font-face {
+    font-family: 'Pizzaria';
+    src: url('../fonts/font-pizza.ttf');
+}
 
 * {
     padding: 0;
     margin: 0;
 
     box-sizing: border-box;
-    font-family: monospace;
 }
 
 :root {
@@ -15,8 +17,6 @@
     --cor-gamboge: #eca442;
     --cor-tomato: #ca2521;
     --cor-pepperoni: #61120e;
-
-    --fonte-nerko: 'Nerko One';
 }
 
 header {
@@ -25,6 +25,7 @@ header {
     padding: 20px;
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.479);
     font-family: var(--fonte-nerko);
+    font-family: 'Pizzaria', monospace;
 }
 
 header > h1 {
@@ -38,6 +39,7 @@ header > p {
 
 nav {
     text-align: right;
+    font-weight: lighter;
 }
 
 nav > ul {
@@ -62,6 +64,11 @@ nav > ul > li > a:hover {
     background-color: var(--cor-gamboge);
 }
 
+main {
+    font-family: 'Pizzaria', monospace;
+    font-weight: lighter;
+}
+
 #section-cardapio {
     background-color: white;
     width: 100%;
@@ -69,14 +76,14 @@ nav > ul > li > a:hover {
     padding: 20px;
 }
 
-#section-cardapio > h2 {
+#section-cardapio-pizza > h2 , #section-cardapio-bebidas > h2 {
     text-align: center;
     font-size: 2em;
     background-color: var(--cor-tomato);
     width: 300px;
     color: white;
     margin: auto;
-    margin-bottom: 10px;
+    margin-top: 30px;
 }
 
 section.itens {
@@ -92,10 +99,12 @@ section.itens {
 
 section.itens h2 {
     font-size: 1.6em;
+    margin-bottom: 10px;
 }
 
 .img-itens {
     width: 100px;
+    margin-bottom: 10px;
 }
 
 .bnt-comprar-itens {
@@ -107,6 +116,10 @@ section.itens h2 {
     border-radius: 8px;
     box-shadow: 0px 0px 5px var(--cor-gamboge);
     font-size: 1em;
+    font-family: 'Pizzaria', monospace;
+    font-weight: lighter;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .bnt-comprar-itens:hover {
@@ -116,10 +129,12 @@ section.itens h2 {
 
 footer {
     background-image: linear-gradient(to bottom, var(--cor-pepperoni), var(--cor-tomato));
-    padding: 10px;
+    padding: 20px;
     color: white;
     text-align: center;
     box-shadow: 0px -3px 10px rgba(0, 0, 0, 0.479);
+    font-family: monospace;
+    font-size: 1em;
 }
 
 footer p {
